--- a/WebContent/views/desktop/datos/configuracion/plantillaEvento/PlantillaEventoFormBasic.zul
+++ b/WebContent/views/desktop/datos/configuracion/plantillaEvento/PlantillaEventoFormBasic.zul
@@ -59,13 +59,15 @@
 										<listitem
 											label="@load(each.nombre)">
 											<zscript>
-	self.setDisabled(vm.disabledIndicador(each));
-</zscript>
+												self.setDisabled(vm.disabledIndicador(each));
+											</zscript>
 										</listitem>
 									</template>
 								</listbox>
 							</div>
 							<div sclass="col s1" align="center">
+							<span sclass="fa fa-question-circle fa-lg help-icon"
+								tooltip="pop_agregarRemoverIndicador, position=after_end" />
 								<div sclass="row">
 									<button sclass="button-conf"
 										iconSclass="fa fa-angle-double-right"
@@ -108,13 +110,15 @@
 										<listitem
 											label="@load(each.nombre)">
 											<zscript>
-	self.setDisabled(vm.disabledTarea(each));
-</zscript>
+												self.setDisabled(vm.disabledTarea(each));
+											</zscript>
 										</listitem>
 									</template>
 								</listbox>
 							</div>
-							<div sclass="col s1">
+							<div sclass="col s1">							
+							<span sclass="fa fa-question-circle fa-lg help-icon"
+								tooltip="pop_agregarRemoverTarea, position=after_end" />
 								<div sclass="row valign">
 									<button
 										iconSclass="fa fa-angle-double-right" sclass="button-conf"
@@ -147,6 +151,19 @@
 				</tabbox>
 			</div>
 		</div>
+		
+		<popup id="pop_agregarRemoverTarea" width="200px">
+			<html>
+				<![CDATA[ Para agregar o remover tareas al evento, 
+				primero seleccione y luego use estos botones. <br /><font color="#3b85a1">(>>) Agregar (<<) Remover</font> ]]>
+			</html>
+		</popup>
+		<popup id="pop_agregarRemoverIndicador" width="200px">
+			<html>
+				<![CDATA[ Para agregar o remover indicadores al evento, 
+				primero seleccione y luego use estos botones. <br /><font color="#3b85a1">(>>) Agregar (<<) Remover</font> ]]>
+			</html>
+		</popup>
 
 		<div id="divButtonsForm"
 			use="karen.core.form.buttons.containers.DivButtonsForm">
