--- a/WebContent/views/desktop/datos/parametros/recurso/RecursoFormBasic.zul
+++ b/WebContent/views/desktop/datos/parametros/recurso/RecursoFormBasic.zul
@@ -13,6 +13,8 @@
 						value="@bind(vm.recurso.nombre)">
 					</textbox>
 				</div>
+				<span sclass="fa fa-question-circle fa-lg help-icon"
+					tooltip="pop_nombre, position=after_end" />
 			</div>
 
 			<div sclass="col s12">
@@ -28,6 +30,8 @@
 						</template>
 					</combobox>
 				</div>
+				<span sclass="fa fa-question-circle fa-lg help-icon"
+					tooltip="pop_unidadMedida, position=after_end" />
 			</div>
 
 			<div sclass="col s12">
@@ -44,6 +48,8 @@
 						</template>
 					</combobox>
 				</div>
+				<span sclass="fa fa-question-circle fa-lg help-icon"
+					tooltip="pop_clasificador, position=after_end" />
 			</div>
 
 			<div class="col s12">
@@ -54,8 +60,41 @@
 						value="@bind(vm.recurso.descripcion)">
 					</textbox>
 				</div>
+				<span sclass="fa fa-question-circle fa-lg help-icon"
+					tooltip="pop_descripcion, position=after_end" />
 			</div>
 		</div>
+		
+		<popup id="pop_nombre" width="200px">
+			<html>
+				<![CDATA[ Por favor, indique el nombre del recurso
+				que desea registrar.<br /><font color="#3b85a1">Ejemplo: Hojas.</font> ]]>
+			</html>
+		</popup>
+		
+		<popup id="pop_unidadMedida" width="200px">
+			<html>
+				<![CDATA[ Por favor, indique la unidad de medida del recurso
+				que desea registrar.<br /><font color="#3b85a1">Ejemplo: 
+				Paquete.</font> ]]>
+			</html>
+		</popup>
+
+		<popup id="pop_clasificador" width="200px">
+			<html>
+				<![CDATA[ Por favor, indique un clasificador para el
+				recurso que desea registrar.<br /><font
+				color="#3b85a1">Ejemplo: Material.</font> ]]>
+			</html>
+		</popup>
+
+		<popup id="pop_descripcion" width="200px">
+			<html>
+				<![CDATA[ Por favor, indique una descripción breve,
+				sobre el material que desea registrar.<br /><font
+				color="#3b85a1">Ejemplo: Cajas de hojas de oficina.</font> ]]>
+			</html>
+		</popup>
 
 		<div id="divButtonsForm"
 			use="karen.core.form.buttons.containers.DivButtonsForm">
