--- a/WebContent/views/desktop/datos/parametros/requisito/RequisitoFormBasic.zul
+++ b/WebContent/views/desktop/datos/parametros/requisito/RequisitoFormBasic.zul
@@ -13,6 +13,7 @@
 						value="@bind(vm.requisito.nombre)">
 					</textbox>
 				</div>
+				<span sclass="fa fa-question-circle fa-lg help-icon" tooltip="pop_nombre, position=after_end"/>
 			</div>
 
 			<div class="col s12">
@@ -23,9 +24,23 @@
 						value="@bind(vm.requisito.descripcion)">
 					</textbox>
 				</div>
+				<span sclass="fa fa-question-circle fa-lg help-icon" tooltip="pop_descripcion, position=after_end"/>
 			</div>
 		</div>
-
+		
+		<popup id="pop_nombre" width="200px">
+			<html>
+				<![CDATA[ Por favor, indique el nombre del requisito
+				que desea registrar.<br /><font color="#3b85a1">Ejemplo: Informe médico.</font> ]]>
+			</html>
+		</popup>
+		<popup id="pop_descripcion" width="200px">
+			<html>
+				<![CDATA[ Por favor, indique una descripcion breve del requisito
+				que desea registrar.<br /><font color="#3b85a1">Ejemplo: Informe médico del beneficiario.</font> ]]>
+			</html>
+		</popup>
+		
 		<div id="divButtonsForm"
 			use="karen.core.form.buttons.containers.DivButtonsForm">
 		</div>
