--- a/WebContent/views/desktop/datos/configuracion/requisitoAyuda/requisitoAyudaFormBasic.zul
+++ b/WebContent/views/desktop/datos/configuracion/requisitoAyuda/requisitoAyudaFormBasic.zul
@@ -44,13 +44,15 @@
 										<listitem
 											label="@load(each.nombre)">
 											<zscript>
-	self.setDisabled(vm.disabledRequisito(each));
-</zscript>
+												self.setDisabled(vm.disabledRequisito(each));
+											</zscript>
 										</listitem>
 									</template>
 								</listbox>
 							</div>
 							<div sclass="col s1">
+							<span sclass="fa fa-question-circle fa-lg help-icon"
+								tooltip="pop_agregarRemoverRequisito, position=after_end" />
 								<div sclass="row valign">
 									<button
 										iconSclass="fa fa-angle-double-right" sclass="button-conf"
@@ -83,10 +85,16 @@
 				</tabbox>
 			</div>
 		</div>
+		
+		<popup id="pop_agregarRemoverRequisito" width="200px">
+			<html>
+				<![CDATA[ Para agregar o remover requisitos a la ayuda, 
+				primero seleccione y luego use estos botones. <br /><font color="#3b85a1">(>>) Agregar (<<) Remover</font> ]]>
+			</html>
+		</popup>
 
 		<div id="divButtonsForm"
 			use="karen.core.form.buttons.containers.DivButtonsForm">
-
 		</div>
 
 	</div>
