--- a/WebContent/views/desktop/datos/parametros/evento/EventoIndex.zul
+++ b/WebContent/views/desktop/datos/parametros/evento/EventoIndex.zul
@@ -22,7 +22,7 @@
 							<listitem>
 								<listcell label="@load(each.nombre)" />
 								<listcell label="@load(each.descripcion)" />
-								<listcell label="@load(each.tipoEvento)" />
+								<listcell label="@load(each.tipoEventoEnum)" />
 								<listcell label="@load(each.fkClasificadorEvento.nombre)" />
 							</listitem>
 						</template>
