--- a/WebContent/views/desktop/datos/parametros/trabajoSocial/TrabajoSocialFormBasic.zul
+++ b/WebContent/views/desktop/datos/parametros/trabajoSocial/TrabajoSocialFormBasic.zul
@@ -13,6 +13,8 @@
 						value="@bind(vm.trabajoSocial.nombre)">
 					</textbox>
 				</div>
+				<span sclass="fa fa-question-circle fa-lg help-icon"
+					tooltip="pop_nombre, position=after_end" />
 			</div>
 
 			<div sclass="col s12">
@@ -29,6 +31,8 @@
 						</template>
 					</combobox>
 				</div>
+				<span sclass="fa fa-question-circle fa-lg help-icon"
+					tooltip="pop_clasificador, position=after_end" />
 			</div>
 
 			<div class="col s12">
@@ -39,8 +43,33 @@
 						rows="1" value="@bind(vm.trabajoSocial.descripcion)">
 					</textbox>
 				</div>
-			</div>
+				<span sclass="fa fa-question-circle fa-lg help-icon"
+					tooltip="pop_descripcion, position=after_end" />
+			</div>			
 		</div>
+		
+		<popup id="pop_nombre" width="200px">
+			<html>
+				<![CDATA[ Por favor, indique el nombre del trabajo social
+				que desea registrar.<br /><font color="#3b85a1">Ejemplo: Lectura de cuentos.</font> ]]>
+			</html>
+		</popup>
+
+		<popup id="pop_clasificador" width="200px">
+			<html>
+				<![CDATA[ Por favor, indique un clasificador para
+				el trabajo social que desea registrar.<br /><font
+				color="#3b85a1">Ejemplo: Visita a niños para lectura de cuentos.</font> ]]>
+			</html>
+		</popup>
+
+		<popup id="pop_descripcion" width="200px">
+			<html>
+				<![CDATA[ Por favor, indique una descripción breve,
+				sobre el trabajo social que desea registrar.<br /><font
+				color="#3b85a1">Ejemplo: Educativa.</font> ]]>
+			</html>
+		</popup>
 
 		<div id="divButtonsForm"
 			use="karen.core.form.buttons.containers.DivButtonsForm">
